# theme-a-roo

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  publish.sh  tailwind.config.js  vite.config.ts  vite.config.web.ts
docs/: index.html
docs/assets/: index-7k2pFP8a.js  index-BFBaHamn.js  index-BMIzBAQz.js  index-BPh-m7xm.js  index-BSnUzQwA.js  index-BSxyNlID.js  index-BV3T1ngz.js  index-BcHSDCxi.js  index-Bd1P-HKk.css  index-BgK9Uvzj.js  index-Bghlnf_4.js  index-Bgx9o07z.js  index-BrliCEyf.js  index-BvhV_pP1.js  index-BwqnrL-D.js  index-BzFPWPG6.js  index-C1h6DtGZ.js  index-C5JmMX13.js  index-C5ViZ-qv.css  index-C7pwrt0L.js  index-CCocOHCE.js  index-CJalRdsJ.js  index-CLik4BKy.css  index-CUuUklbf.js  index-CUvSmEsk.js  index-CWPVfy_w.js  index-CZIWtCoU.js  index-CZtJOK76.js  index-CdoEcfOk.js  index-CeIfNwDq.js  index-Cf4-RlJj.js  index-Cj1JfcFv.css  index-CobwU9PM.js  index-Cv7sVePG.js  index-CwcEGNwZ.js  index-DE4xjnEe.js  index-DJbvQpKY.js  index-DLeBjD7v.js  index-DSGZuqPE.js  index-DUt6dX9e.js  (+31 more)
src/: App.tsx  index.css  main.tsx  state.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/src/: lib.rs
src/components/: BackdropFilters.tsx  BackgroundImageEditor.tsx  ColorPicker.tsx  CopyBox.tsx  CopyButton.tsx  Header.tsx  Layout.tsx  Nav.tsx  NavLink.tsx  Pagination.tsx  PasteInput.tsx  ThemeActions.tsx  ThemeCard.tsx  ThemeColorPicker.tsx  ThemeSelector.tsx
src/components/dialogs/: ReplaceWorkingThemeWarning.tsx
src/components/nft/: CollectionInfoForm.tsx  NftImagesForm.tsx  UploadMetadata.tsx  UploadToIPFS.tsx
src/components/ui/: data-table-column-header.tsx  data-table.tsx  dialog.tsx  table.tsx  (+1 more)
src/contexts/: ErrorContext.tsx  UploadedUrlsContext.tsx
src/hooks/: useCollectionInfo.ts  useUploadedUrls.ts  useWorkingThemeAutoApply.ts  useWorkingThemeState.ts
src/lib/: color.ts  constants.ts  imageStorage.ts  opeanai.ts  themes.ts  utils.ts  web-fallbacks.ts
src/pages/: About.tsx  BackgroundEditor.tsx  Components.tsx  Dialogs.tsx  JsonEditor.tsx  Mint.tsx  PrepareNft.tsx  Tables.tsx  ThemePreview.tsx  Themes.tsx
(+5 files in other folders)
