[workspace.package]
readme = "README.md"
keywords = ["chia", "wallet", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies"]

[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "deny"
non_ascii_idents = "deny"
unused_extern_crates = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "allow"
unreachable_code = "warn"
unreachable_patterns = "warn"
dead_code = "warn"
deprecated = "deny"
deprecated_in_future = "deny"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "allow", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
used_underscore_binding = "allow"
unwrap_used = "warn"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
result_large_err = "allow"

[workspace.dependencies]
tauri = "2.5.1"
tauri-build = "2.2.0"
tauri-plugin = "2.2.0"
glob = "0.3.1"
